# OptiPrice

./: .gitignore  CMakeLists.txt  README.md
config/: database.sql
include/: databaseConnection.h  database_connection.h  option.h  optionPricer.h  optionRepository.h  option_pricer.h  user.h  userAuth.h
src/: databaseConnection.cpp  database_connection.cpp  main.cpp  optionPricer.cpp  optionRepository.cpp  option_pricer.cpp  option_pricer.h  userAuth.cpp
